# bachelor-thesis

./: .clang-format  .gitignore
code/compiler/: .clang-format  .gitignore  CMakeLists.txt  Makefile
code/compiler/apps/: CMakeLists.txt  dslrc.cpp
code/compiler/cmake/: DslTargets.cmake
code/compiler/docs/: grammar.bnf  lexical.bnf
code/compiler/examples/: example.dsl  fur_elise.dsl  pirates.dsl
code/compiler/include/dsl/: compiler.hpp
code/compiler/include/dsl/ast/: decl.hpp  expr.hpp  ops.hpp  play.hpp  program.hpp  stmt.hpp
code/compiler/include/dsl/backend/: midi_writer.hpp
code/compiler/include/dsl/core/: location.hpp
code/compiler/include/dsl/core/ast/: ast.h  expression.hpp  operators.hpp  program.hpp  statement.hpp
code/compiler/include/dsl/core/errors/: compiler_error.hpp  lexical_error.hpp  lowerer_error.hpp  semantic_error.hpp  syntax_error.hpp  terminal_color.hpp
code/compiler/include/dsl/core/music/: note.hpp  pitch_class.hpp
code/compiler/include/dsl/diagnostics/: diagnostic.hpp
code/compiler/include/dsl/errors/: lexical_error.hpp  semantic_error.hpp  syntax_error.hpp
code/compiler/include/dsl/ir/: expression_evaluator.hpp  lowerer.hpp  lowerer_context.hpp  note_event.h  program.hpp  track.h  value.hpp  value_flattener.hpp
code/compiler/include/dsl/music/: accidental.hpp  drum_note.hpp  key_mode.hpp  note.hpp  pitch.hpp  pitch_class.hpp
code/compiler/include/dsl/semantic/: analysis_result.hpp  analyzer.hpp  annotations.hpp  diagnostic.hpp  symbol.hpp
code/compiler/include/dsl/utils/: overloaded.hpp
code/compiler/src/: CMakeLists.txt  main.cpp
code/compiler/src/backend/: CMakeLists.txt  midi_writer.cpp
code/compiler/src/core/music/: CMakeLists.txt  accidental.cpp  note.cpp  pitch.cpp
code/compiler/src/dsl/: compiler.cpp
code/compiler/src/dsl/ast/: declarations.hpp  definitions.hpp  expression.hpp  expressions.hpp  program.hpp  statement.hpp  statements.hpp
code/compiler/src/dsl/backend/: CMakeLists.txt  midi_writer.cpp  midi_writer.hpp
code/compiler/src/dsl/diagnostics/: diagnostics_engine.cpp  diagnostics_engine.hpp
code/compiler/src/dsl/errors/: CMakeLists.txt  compiler_error.cpp  compiler_error.hpp  lexical_error.cpp  lexical_error.hpp  lowerer_error.cpp  lowerer_error.hpp  semantic_error.cpp  semantic_error.hpp  syntax_error.cpp  syntax_error.hpp  terminal_color.hpp
code/compiler/src/dsl/frontend/: CMakeLists.txt  parse.cpp  parse.hpp  parse_result.cpp  parser.y  parser_result.cpp  parser_result.hpp  scanner.l  token_parsers.cpp  token_parsers.hpp
code/compiler/src/dsl/ir/: CMakeLists.txt  ast_lowerer.hpp  expression_evaluator.cpp  expression_evaluator.hpp  lowerer.cpp  lowerer_context.cpp  lowerer_context.hpp  track.hpp  value.hpp  value_flattener.cpp  value_flattener.hpp  values.hpp
code/compiler/src/dsl/lowerer/: CMakeLists.txt  lower.cpp  lower.hpp  lower_result.cpp  lower_result.hpp  lowerer.cpp  lowerer.hpp
code/compiler/src/dsl/lowering/: CMakeLists.txt  lower.cpp  lower.hpp  lower_result.cpp  lower_result.hpp
code/compiler/src/dsl/midi/: CMakeLists.txt  midi_writer.cpp  midi_writer.hpp  write_midi.cpp  write_midi.hpp
code/compiler/src/dsl/music/: CMakeLists.txt  instrument.hpp  note.cpp
code/compiler/src/dsl/parsing/: CMakeLists.txt  parse.cpp  parse.hpp  parse_result.cpp  parse_result.hpp
code/compiler/src/dsl/semantic/: CMakeLists.txt  analysis_result.cpp  analysis_result.hpp  analyze.cpp  analyzer.cpp  analyzer.hpp  annotations.cpp  annotations.hpp  diagnostic.hpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  type.hpp
code/compiler/src/dsl/source/: location.cpp  location.hpp  position.cpp  position.hpp
code/compiler/src/frontend/: CMakeLists.txt  parser.y  scanner.l
code/compiler/src/ir/: CMakeLists.txt  expression_evaluator.cpp  lowerer.cpp  value_flattener.cpp
code/compiler/src/ir/detail/: CMakeLists.txt  expression_evaluator.cpp
code/compiler/src/ir/evaluators/: CMakeLists.txt  evaluate_binary_expression.cpp  evaluate_call.cpp  evaluate_chord.cpp  evaluate_identifier.cpp  evaluate_literals.cpp  evaluate_sequence.cpp  evaluate_ternary.cpp  evaluate_unary_expression.cpp
code/compiler/src/ir/flatteners/: CMakeLists.txt  flatten_chord.cpp  flatten_note.cpp  flatten_sequence.cpp
code/compiler/src/ir/lowerer/: CMakeLists.txt  expression_evaluator.cpp  lowerer.cpp  value_flattener.cpp
code/compiler/src/ir/lowerers/: CMakeLists.txt  lowerer_bindings.cpp  lowerer_context.cpp  lowerer_control.cpp  lowerer_play.cpp  lowerer_voice.cpp
code/compiler/src/music/: CMakeLists.txt  accidental.cpp  pitch.cpp
code/compiler/src/scanner/: CMakeLists.txt  scan_result.hpp  scanner.cpp  scanner.hpp  scanner.l  scanner_runtime.cpp  scanner_runtime.hpp  source_location.hpp  token.hpp
code/compiler/src/semantic/: CMakeLists.txt  analysis_result.cpp  analyzer.cpp  annotations.cpp
code/compiler/src/semantic/detail/: CMakeLists.txt  semantic_analyzer.cpp  semantic_analyzer.hpp
code/compiler/tests/: CMakeLists.txt  scanner_test.cpp
code/compiler/tests/data/: example.dsl  scanner-err.mus  valid.mus
code/compiler/tests/golden/: CMakeLists.txt  golden_test.cpp
code/compiler/tests/integration/: CMakeLists.txt  compiler_api_test.cpp  compiler_integration_test.cpp
code/compiler/tests/integration/data/: control_flow.dsl  nested_patterns.dsl  pattern_edge_cases.dsl  rest_scenarios.dsl  sequence_cursor.dsl
code/compiler/tests/unit/backend/: midi_writer_test.cpp
code/compiler/tests/unit/frontend/: parser_test.cpp  scanner_test.cpp
code/compiler/tests/unit/ir/: lowerer_test.cpp  lowerer_test_support.hpp  lowering_regression_test.cpp
code/compiler/tests/unit/lowering/: lowerer_diagnostics_test.cpp  lowerer_test.cpp  lowerer_test_support.hpp  lowering_regression_test.cpp
code/compiler/tests/unit/midi/: midi_writer_test.cpp
code/compiler/tests/unit/music/: note_test.cpp
code/compiler/tests/unit/parsing/: parser_test.cpp  scanner_test.cpp
code/compiler/tests/unit/semantic/: metadata_test.cpp  scope_access_test.cpp  semantic_analyzer_test.cpp
(+335 files in other folders)
